# bird-rs

./: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  dprint.json
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/bird-cli/: Cargo.toml  README.md
crates/bird-cli/src/: cli.rs  lib.rs  main.rs  output.rs  resonance.rs  storage_monitor.rs  sync_engine.rs
crates/bird-cli/src/commands/: bookmarks.rs  config.rs  db.rs  export.rs  insights.rs  likes.rs  list.rs  mod.rs  read.rs  resonance.rs  sync.rs  whoami.rs
crates/bird-cli/src/insights/: entities.rs  headlines.rs  mod.rs  output.rs  prompt.rs
crates/bird-cli/src/insights/llm/: anthropic.rs  claude_code.rs  mod.rs
crates/bird-client/: Cargo.toml  README.md
crates/bird-client/src/: client.rs  constants.rs  cookies.rs  lib.rs  query_ids.rs
crates/bird-client/src/operations/: bookmarks.rs  likes.rs  mod.rs  timeline.rs  tweet_detail.rs  user_tweets.rs
crates/bird-core/: Cargo.toml  README.md
crates/bird-core/src/: error.rs  lib.rs  pagination.rs  storage.rs  types.rs
crates/bird-storage/: Cargo.toml  README.md
crates/bird-storage/src/: lib.rs  memory.rs  surrealdb.rs
crates/bird-tui/: Cargo.toml  README.md
crates/bird-tui/src/: app.rs  data.rs  events.rs  main.rs  ui.rs
docs/: FOLLOWING_SYNC_PLAN.md  STORAGE_SYNC_OPTIONS.md  query-id-rotation.md
src/: cli.rs  constants.rs  cookies.rs  error.rs  lib.rs  main.rs  output.rs  types.rs
src/client/: mod.rs  tweet_detail.rs
