[package]
name = "bird"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Chen"]
description = "A fast X/Twitter CLI for reading tweets, powered by GraphQL"
license = "MIT"
repository = "https://github.com/kevinmichaelchen/bird-rs"
keywords = ["twitter", "x", "cli", "graphql", "social-media"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "bird"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Cookie extraction
sweet-cookie = { path = "../sweet-cookie-rs" }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
url = "2"
urlencoding = "2"
regex = "1"
getrandom = "0.2"

# Output formatting
colored = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
