[workspace]
resolver = "2"
members = [
    "crates/bird-core",
    "crates/bird-client",
    "crates/bird-storage",
    "crates/bird-cli",
    "crates/bird-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kevin Chen"]
license = "MIT"
repository = "https://github.com/kevinmichaelchen/bird-rs"

[workspace.dependencies]
# Internal crates
bird-core = { path = "crates/bird-core" }
bird-client = { path = "crates/bird-client" }
bird-storage = { path = "crates/bird-storage" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
colored = "2"

# Cookie extraction
sweet-cookie = { path = "../sweet-cookie-rs" }

# Database
surrealdb = { version = "2", features = ["kv-rocksdb", "protocol-http"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
regex = "1"
getrandom = "0.2"
dirs = "5"
futures = "0.3"
toml = "0.8"

# Dev dependencies
tempfile = "3"
tokio-test = "0.4"
