[package]
name = "bird-client"
description = "Twitter/X GraphQL API client with pagination support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bird-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
urlencoding.workspace = true
regex.workspace = true
getrandom.workspace = true
sweet-cookie.workspace = true
thiserror.workspace = true
futures.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio-test.workspace = true
