[package]
name = "bird-storage"
description = "Storage backends for bird Twitter client (SurrealDB, in-memory)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bird-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
surrealdb.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
